--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-# Compiled class file
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Java
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -18,7 +20,62 @@
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# IDE
+.idea/
+*.iml
+*.iws
+*.ipr
+.project
+.classpath
+.settings/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Spring Boot
+spring-boot-*.log
+application-local.properties
+application-local.yml
+
+# OS
+.DS_Store
+Thumbs.db
+*.pid
+
+# Build
+dist/
+build/
+out/
+bin/
+
+# Docker
+*.seed
+*.pid.lock
+
+# Test
+coverage/
+*.coverage
+.nyc_output/
+
+# JaCoCo
+jacoco.exec
+jacoco-it.exec
+*.exec
+
+# Spotbugs
+spotbugsXml.xml
+spotbugs.html
+
+# Temporary files
+*.tmp
+*.bak
+*.backup
+
+# Environment
+.env
+.env.local
+.env.*.local
